k8s/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP   
  selector:
    app: backend    
  ports:
    - port: 3000       
      targetPort: 3000
