k8s/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend    
  ports:
    - port: 80
      targetPort: 80
